feat: nutrir dashboard
